--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
                         <span class="list__number list__number--none">5</span>
                         <p class="list__text">
                             *Liczba nagród jest limitowana do 1000 sztuk, a promocja trwa do wyczerpania limitu nagród.
-                            Obowiązują warunki. Regulamin <a href="" class="list__link">[LINK]</a></p>
+                            Obowiązują warunki.<a href="" class="list__link"> Regulamin</a></p>
 
                     </li>
                 </ul>
