--- a/index.html
+++ b/index.html
@@ -132,28 +132,28 @@
             </div>
         </section>
         <div class="coin" style="left:30%;">
-            <img src="assets/coin.svg" alt="coin" class="coin__img coin__img--long">
+            <img src="assets/coin.gif" alt="coin" class="coin__img coin__img--long">
         </div>
         <div class="coin coin--small" style="left:60%; animation-delay:1s">
-            <img src="assets/coin.svg" alt="coin" class="coin__img">
+            <img src="assets/coin.gif" alt="coin" class="coin__img">
         </div>
         <div class="coin coin--small" style="left:20%; animation-delay:2s">
-            <img src="assets/coin.svg" alt="coin" class="coin__img">
+            <img src="assets/coin.gif" alt="coin" class="coin__img">
         </div>
         <div class="coin coin--small" style="left:10%; animation-delay:3s">
-            <img src="assets/coin.svg" alt="coin" class="coin__img">
+            <img src="assets/coin.gif" alt="coin" class="coin__img">
         </div>
         <div class="coin" style="left:33%; animation-delay:4s">
-            <img src="assets/coin.svg" alt="coin" class="coin__img coin__img--long">
+            <img src="assets/coin.gif" alt="coin" class="coin__img coin__img--long">
         </div>
         <div class="coin" style="left:80%; animation-delay:6s">
-            <img src="assets/coin.svg" alt="coin" class="coin__img">
+            <img src="assets/coin.gif" alt="coin" class="coin__img">
         </div>
         <div class="coin coin--small" style="left:70%; animation-delay:7s">
-            <img src="assets/coin.svg" alt="coin" class="coin__img coin__img--long">
+            <img src="assets/coin.gif" alt="coin" class="coin__img coin__img--long">
         </div>
         <div class="coin coin--small" style="left:80%; animation-delay:15s">
-            <img src="assets/coin.svg" alt="coin" class="coin__img coin__img--long">
+            <img src="assets/coin.gif" alt="coin" class="coin__img coin__img--long">
         </div>
     </main>
     <script>
