--- a/index.html
+++ b/index.html
@@ -25,9 +25,9 @@
             <div class="points__inner">
                 <img src="assets/minecraft_minecoins_1720.jpg" alt="minecoins-card" class="points__img">
                 <ul class="list">
-                    <h3 class="list__header">
+                    <p class="list__header">
                         Jak zdobyć kartę podarunkową?
-                    </h3>
+                    </p>
                     <li class="list__item">
                         <span class="list__number">1</span>
                         <p class="list__text">Obserwuj otrzymywane od nas komunikaty SMS-owe</p>
@@ -59,9 +59,9 @@
                 </ul>
             </div>
             <ul class="list list--mid">
-                <h3 class="list__header">
+                <p class="list__header">
                     Chcesz zrealizować kod? To proste!
-                </h3>
+                </p>
                 <li class="list__item">
                     <span class="list__number">1</span>
                     <p class="list__text">Wejdź na <a href="https://www.minecraft.net/pl-pl/redeem/minecoins"
@@ -72,15 +72,15 @@
                     <p class="list__text">Wpisz kod, który otrzymałeś SMSem.</p>
                 </li>
             </ul>
-            <h3 class="list__header list__header--mid">
+            <p class="list__header list__header--mid">
                 I już! Monety zostaną przypisane do Twojego konta Microsoft.
-            </h3>
+            </p>
         </section>
         <section class="info">
             <div class="info__inner">
                 <div class="info__left">
                     <div class="header header--left">
-                        <h1 class="header__text ">Czym są monety Minecraft Minecoins?</h1>
+                        <h2 class="header__text ">Czym są monety Minecraft Minecoins?</h2>
                     </div>
                     <div class="info__coin">
                         <img src="assets/coin.svg" alt="coin" class="info__picture">
@@ -109,7 +109,7 @@
             <div class="footer__inner">
                 <img src="assets/klub-ccc.svg" alt="klub-ccc" class="logos__logo logos__logo--center">
                 <div class="header">
-                    <h1 class="header__text">Strefa gamingowa w Klubie CCC!</h1>
+                    <h2 class="header__text">Strefa gamingowa w Klubie CCC!</h2>
                 </div>
                 <p class="footer__text">
                     W sierpniu i wrześniu w Klubie CCC czeka na Ciebie jeszcze więcej ofert gamingowych! Sprawdź i
