--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         <div class="header">
             <h1 class="header__text">Minecraft Minecoins w Klubie CCC</h1>
         </div>
-        <section class="points">
+        <div class="points">
             <div class="points__inner">
                 <img src="assets/minecraft_minecoins_1720.jpg" alt="minecoins-card" class="points__img">
                 <ul class="list">
@@ -75,8 +75,8 @@
             <p class="list__header list__header--mid">
                 I już! Monety zostaną przypisane do Twojego konta Microsoft.
             </p>
-        </section>
-        <section class="info">
+        </div>
+        <div class="info">
             <div class="info__inner">
                 <div class="info__left">
                     <div class="header header--left">
@@ -104,8 +104,8 @@
                     <img src="assets/minecraft-2.jpg" alt="" class="info__img">
                 </div>
             </div>
-        </section>
-        <section class="footer">
+        </div>
+        <div class="footer">
             <div class="footer__inner">
                 <img src="assets/klub-ccc.svg" alt="klub-ccc" class="logos__logo logos__logo--center">
                 <div class="header">
@@ -130,7 +130,7 @@
                     </div>
                 </div>
             </div>
-        </section>
+        </div>
         <div class="coin" style="left:30%;">
             <img src="assets/coin.gif" alt="coin" class="coin__img coin__img--long">
         </div>
